src/objects/BSS_Survey_Value__c.object
<CustomObject>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>BSS_Project__c</referenceTo>
        <relationshipLabel>BSS Survey Values</relationshipLabel>
        <relationshipName>BSS_Survey_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <formula>Survey__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>gfsurveys__Survey__c</referenceTo>
        <relationshipLabel>BSS_Survey_Values_Survey</relationshipLabel>
        <relationshipName>BSS_Survey_Values_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_value__c</fullName>
        <label>Survey value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BSS Survey Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Name__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Survey_value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSSV-{000000}</displayFormat>
        <label>BSS_Survey_Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSS Survey Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>